[project]
name = "swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jinja2<=3.1.6",
    "psutil>=7.0.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "tinygrad>=0.10.2",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "websockets>=15.0.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
]
